--- a/src/Header/header.style.scss
+++ b/src/Header/header.style.scss
@@ -68,8 +68,6 @@ $para-color: #6e6e6e;
 	}
 }
 .header-top {
-	display: -webkit-box;
-	display: -ms-flexbox;
 	display: flex;
 	border-bottom: 1px solid #e5e5e5;
 	.ht-left {
@@ -176,11 +174,11 @@ $para-color: #6e6e6e;
 				position: absolute;
 				right: 11px;
 				top: 10px;
-				content: "3";
-				font-family: "ElegantIcons";
+				content: "";
 				font-size: 16px;
 				color: #b2b2b2;
 			}
+			
 		}
 		.input-group {
 			max-width: 70%;
@@ -194,16 +192,17 @@ $para-color: #6e6e6e;
 				padding-left: 20px;
 			}
 			button {
-				font-size: 16px;
+				font-size: 19px;
 				color: #ffffff;
 				position: absolute;
 				right: -3px;
 				top: -1px;
 				border: 1px solid #e7ab3c;
 				background: #e7ab3c;
-				padding: 12px 16px 12px;
+				padding: 10px 14px 10px;
 				cursor: pointer;
 			}
+
 		}
 	}
 	.nav-right {
@@ -276,10 +275,8 @@ $para-color: #6e6e6e;
 
 .nav-item {
 	background: rgb(240, 240, 240);
-	display: -webkit-box;
-	display: -ms-flexbox;
     display: flex;
-    align-items: center;
+	align-items: center;
     padding-top: 10px;
     padding-bottom:0;
 	.nav-depart {
@@ -287,7 +284,7 @@ $para-color: #6e6e6e;
 		.depart-btn {
 			background: #3b3b3b;
 			color: rgb(230, 230, 230);
-			padding: 14px 84px 14px 18px;
+			padding: 14px 60px 14px 18px;
 			cursor: pointer;
 			position: relative;
 			&:hover {
@@ -303,8 +300,7 @@ $para-color: #6e6e6e;
 				color: #ffffff;
 				right: 20px;
 				top: 13px;
-				content: "";
-				font-family: FontAwesome;
+				content: "";
 				font-size: 18px;
 			}
 			i {
@@ -326,23 +322,18 @@ $para-color: #6e6e6e;
 				opacity: 0;
 				visibility: hidden;
 				padding-bottom: 29px;
-				-webkit-box-shadow: 0 13px 32px rgba(51, 51, 51, 0.1);
 				box-shadow: 0 13px 32px rgba(51, 51, 51, 0.1);
-				-webkit-transition: all 0.3s;
-				-o-transition: all 0.3s;
-				transition: all 0.3s;
+				transition: linear 0.3s;
 				li {
 					list-style: none;
 					a {
                         display: block;
                         text-decoration: none;
-						font-size: 16px;
+						font-size: 15px;
 						color: #000000;
-						padding-left: 40px;
+						padding-left: 32px;
 						padding-top: 16px;
-						padding-right: 30px;
-						-webkit-transition: all 0.3s;
-						-o-transition: all 0.3s;
+						padding-right: 37px;
 						transition: all 0.3s;
 						&:hover {
 							color: #e7ab3c;
@@ -351,15 +342,17 @@ $para-color: #6e6e6e;
 				}
 				li.active {
 					a {
-						color: #e7ab3c;
+						background: #e7ab3c;
+						margin-top: 5px;
+						margin-right: 4px;
+						padding-bottom: 8px;
+						color: black;
 					}
 				}
 			}
 		}
 	}
 	.nav-menu {
-		display: -webkit-inline-box;
-		display: -ms-inline-flexbox;
 		display: inline-flex;
 		position: relative;
 		li {
@@ -368,16 +361,14 @@ $para-color: #6e6e6e;
 			margin-left: -5px;
 			position: relative;
 			a {
-                font-size: 14px;
+                font-size: 15px;
                 text-decoration: none;
 				font-weight: 700;
 				display: block;
 				color: #3a3a3a;
 				border-right: 2px solid #3b3b3b;
 				text-transform: uppercase;
-				padding: 16px 42px 15px;
-				-webkit-transition: all 0.3s;
-				-o-transition: all 0.3s;
+				padding: 16px 42px 14px;
 				transition: all 0.3s;
 			}
 			&:hover {
@@ -394,13 +385,11 @@ $para-color: #6e6e6e;
 				position: absolute;
 				right: 0;
 				top: 82px;
-				width: 200px;
+				width: 180px;
 				z-index: 99;
 				background: #a3a3a3;
 				opacity: 0;
 				visibility: hidden;
-				-webkit-transition: all 0.3s;
-				-o-transition: all 0.3s;
 				transition: all 0.3s;
 				li {
 					display: block;
@@ -413,7 +402,7 @@ $para-color: #6e6e6e;
 					}
 					a {
 						border-right: 0;
-						padding: 13px 20px 12px 30px;
+						padding: 13px 16px 12px 24px;
 						text-transform: capitalize;
 					}
 				}
@@ -430,11 +419,8 @@ $para-color: #6e6e6e;
 
 
 
-
 @media only screen and (min-width: 1200px) and (max-width: 1920px) {
-	.nav-tgl {
-		display: none;
-	}
+	
 	.inner-header {
 		.advanced-search {
 			.input-group {
@@ -452,13 +438,13 @@ $para-color: #6e6e6e;
 				}
 			}
 		}
+		.toolbar__toggle-button {
+			display: none;
+		  }
 	}
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
-	.nav-tgl {
-		display: none;
-	}
 	.inner-header {
 		.advanced-search {
 			.category-btn {
@@ -477,6 +463,9 @@ $para-color: #6e6e6e;
 				}
 			}
 		}
+		.toolbar__toggle-button {
+			display: none;
+		  }
 	}
 }
 
@@ -535,6 +524,9 @@ $para-color: #6e6e6e;
 				}
 			}
 		}
+		.toolbar__toggle-button {
+			display: none;
+		  }
 	}
 }
 
@@ -589,6 +581,20 @@ $para-color: #6e6e6e;
 		.nav-menu {
 			display: none;
 		}
+		.toolbar__toggle-button {
+			display: inline-block;
+			cursor: pointer;
+			position: fixed;
+			z-index: 100;
+			right: 30px;
+			top: 165px;
+			width: 50px;
+			height: 50px;
+			padding: 0;
+			
+		  }
+		
+
 	}
 	
 		.dropdown {
@@ -598,58 +604,7 @@ $para-color: #6e6e6e;
 		}
 	}
 	
-.nav-tgl {
-	display: inline-block;
-	cursor: pointer;
-	position: fixed;
-	z-index: 100;
-	right: 30px;
-	top: 156px;
-	width: 50px;
-	height: 50px;
-	border: none;
-	border-radius: 50%;
-	padding: 0;
-	background: #fff;
-	line-height: 0.5;
-	text-align: center;
-	  > span {
-		  display: inline-block;
-		  position: relative;
-		  height: 2px;
-		  width: 34px;
-		  border-radius: 1px;
-		  background: #293335;
-		  vertical-align: middle;
-		  
-		  &:before, &:after {
-			display: inline-block;
-			  position: absolute;
-			  content: "";
-			  height: 2px;
-			  border-radius: 1px;
-			  background: #293335;
-			  transition: all 200ms;
-		  }
-		  &:before {
-			top: -11px;
-			  left: 3px;
-			  width: 28px;
-		  }
-		  &:after {
-			top: 11px;
-			  left: 6px;
-			  width: 22px;
-		  }
-	  }
-	   
-	  &:focus {outline: none}
-	  
-	  &:hover > span:after, &:hover > span:before {
-		  width: 34px;
-		  left: 0;
-	  }
-  }
+
   
   .nav-menu:before {
 	display: block;
@@ -669,21 +624,6 @@ $para-color: #6e6e6e;
 	  .nav-menu:before {
 		  visibility: visible;
 		  clip-path: circle(100%);
-	  }
-	  
-	  .nav-tgl > span {
-		  height: 0;
-		  &:after, &:before {
-			top: 0px;
-			  left: 0;
-			  width: 34px;
-		  }
-		  &:after {
-			transform: rotate(-45deg);
-		  }
-		  &:before {
-			  transform: rotate(45deg);
-		  }
 	  }
   
 	
@@ -713,9 +653,4 @@ $para-color: #6e6e6e;
 	.container {
 		max-width: 1170px;
 	}
-	.nav-tgl {
-		display: none;
-	}
 }
-
-
