--- a/src/Header/header.style.scss
+++ b/src/Header/header.style.scss
@@ -144,7 +144,15 @@ $para-color: #6e6e6e;
 		padding: 12px 0;
 		a {
 			display: inline-block;
+			text-decoration: none;
+			color: black;
+			h3{
+				font-size: 3rem;
+			}
 		}
+	}
+	.col-lg-7{
+		padding-left: 4rem;
 	}
 	.advanced-search {
 		height: 50px;
@@ -154,10 +162,10 @@ $para-color: #6e6e6e;
 			float: left;
 			background: transparent;
 			border: none;
-			padding-left: 23px;
-			padding-top: 11px;
+			padding-left: 28px;
+			padding-top: 10px;
 			padding-bottom: 13px;
-			padding-right: 60px;
+			padding-right: 55px;
 			font-size: 16px;
 			color: #252525;
 			position: relative;
@@ -438,7 +446,7 @@ $para-color: #6e6e6e;
 				}
 			}
 		}
-		.toolbar__toggle-button {
+		.toolbar_toggle-button {
 			display: none;
 		  }
 	}
@@ -463,7 +471,7 @@ $para-color: #6e6e6e;
 				}
 			}
 		}
-		.toolbar__toggle-button {
+		.toolbar_toggle-button {
 			display: none;
 		  }
 	}
@@ -524,7 +532,7 @@ $para-color: #6e6e6e;
 				}
 			}
 		}
-		.toolbar__toggle-button {
+		.toolbar_toggle-button {
 			display: none;
 		  }
 	}
@@ -565,6 +573,12 @@ $para-color: #6e6e6e;
 		padding: 0;
 		.logo {
 			text-align: center;
+			a{
+				h3{
+					font-size: 3rem;
+				}
+			}
+			
 		}
 		.nav-right {
 			text-align: left;
@@ -578,18 +592,19 @@ $para-color: #6e6e6e;
 	}
 	.nav-item {
 		background: transparent;
+		transform: none;
 		.nav-menu {
 			display: none;
 		}
-		.toolbar__toggle-button {
-			display: inline-block;
+		.toolbar_toggle-button {
+			display: block;
 			cursor: pointer;
-			position: fixed;
-			z-index: 100;
+			position: absolute;
+			z-index: 99;
 			right: 30px;
 			top: 165px;
 			width: 50px;
-			height: 50px;
+			height: auto;
 			padding: 0;
 			
 		  }
